fix : userId 오름 차순으로 변경
Fixes: #41